Node/Java/.NET/Ruby/Lua bindings (Tracks N/J/D/C); per-language Docker images
Five more language wrappers, completing the planned binding set, plus an
opaque-handle FFI layer they share and isolated per-language test images.

Opaque-handle FFI layer (src/ffi.c + emu helpers in emu.c):
- asmtest_regs_new + asmtest_capture6 / _fp2 + asmtest_regs_* accessors
  (capture tier), asmtest_emu_call2 + asmtest_emu_* accessors (emulator),
  and asmtest_corpus_routine(name) for routine addresses — so a dynamic
  binding needs no C struct layout. Built into the shared libraries.

Bindings (each replays the conformance corpus; make <lang>-test):
- Node  (Track N) — koffi
- Java  (Track J) — Foreign Function & Memory API (Panama; preview in JDK 21)
- .NET  (Track D) — P/Invoke
- Ruby  (Track C) — stdlib Fiddle (no gem)
- Lua   (Track C) — LuaJIT ffi

Isolated per-language Docker images (user request):
- Replaced the monolithic Dockerfile.bindings with Dockerfile.bindings-base
  (shared C + libunicorn) and bindings/<lang>/Dockerfile FROM it, so the
  toolchains never mix. make docker-<lang> builds the base (cached) + the
  per-language image and runs the corpus inside it; make docker-bindings does
  all nine. CI's bindings job is now a per-language matrix running docker-<lang>.

Verified: all nine images pass — python 10, cpp 6, rust 8, zig 8, node 7,
java 7, dotnet 7, ruby 7, lua 7. No host regressions (test, check 36/36).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>